[package]
name = "distil"
version = "0.1.0"
authors = ["Elliot Jackson <elliotekj@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies]
cfg-if = "0.1.2"
color_quant = "1.0.0"
delta_e = "0.1.0"
itertools = "0.6.0"
lab = "0.4.2"
quick-error = "1.2.0"
image = { version = "0.22.5", default-features = false, features = ["jpeg", "png_codec"] }
serde = "^1.0.59"
serde_derive = "^1.0.59"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
